# open-habit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  player_stats.rs
crates/gamification/: Cargo.toml
crates/gamification/src/: lib.rs
crates/gamification/src/procedural/: generator.rs  mod.rs  rng.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
flutter/: pubspec.yaml
flutter_app/: .metadata  README.md  pubspec.yaml
flutter_app/android/: gradle.properties
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/synthwave/open_habit/: MainActivity.kt
flutter_app/android/app/src/main/kotlin/com/synthwave/open_habit/widgets/: ChallengesWidgetProvider.kt  QuickToggleWidgetProvider.kt  StatSnapshotWidgetProvider.kt  WidgetThemeUtils.kt  XpSummaryWidgetProvider.kt
flutter_app/android/app/src/main/res/drawable/: widget_background.xml  widget_bg_dark.xml  widget_bg_light.xml  widget_bg_synthwave.xml
flutter_app/android/app/src/main/res/layout/: widget_challenges.xml  widget_quick_toggle.xml  widget_stat_snapshot.xml  widget_xp_summary.xml
flutter_app/android/app/src/main/res/xml/: widget_challenges_info.xml  widget_quick_toggle_info.xml  widget_stat_snapshot_info.xml  widget_xp_summary_info.xml
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/core/theme/: app_theme.dart
flutter_app/lib/models/: app_state.dart  habit_categories.dart  models.dart
flutter_app/lib/providers/: habit_provider.dart  theme_provider.dart
flutter_app/lib/screens/: challenges_screen.dart  dashboard_screen.dart  habits_screen.dart  home_screen.dart  settings_screen.dart  stats_screen.dart
flutter_app/lib/services/: api_client.dart  local_database_service.dart  widget_data_service.dart
flutter_app/lib/widgets/: challenge_card.dart  habit_card.dart  neon_widgets.dart  recommendation_card.dart  section_header.dart  stat_bar.dart  stat_card.dart  stat_dialogs.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
flutter_app/macos/Runner/Resources/: icon.icns
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: frb_generated.rs  lib.rs
flutter_app/rust/src/api/: database.rs  model.rs
flutter_app/test/: widget_test.dart
flutter_app/web/: manifest.json
rust/src/: lib.rs
