[package]
name = "open_habit_db"
description = "SQLite data layer for open_habit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
open_habit_shared = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
