[package]
name = "open_habit_server"
description = "REST API server for open_habit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "open-habit-server"
path = "src/main.rs"

[dependencies]
open_habit_shared = { workspace = true }
open_habit_db = { path = "../db" }
open_habit = { path = "../gamification" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
