[package]
name = "open_habit_bridge"
version = "0.1.0"
edition = "2024"

[workspace]
description = "Open Habit — Rust backend embedded in Flutter via flutter_rust_bridge"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time (used internally, not exposed in API)
chrono = "0.4"
